# the-finals-turret

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  control.html  flake.nix  printer.cfg  start-container.sh
__old/: README.md  cvtest.py  devenv.nix  devenv.yaml  dynamic_quantized.onnx  pyqt5test.py  toONNX.py
__old/runs/detect/yolov8_people_detection/: args.yaml
__old/runs/detect/yolov8_people_detection2/: args.yaml
sentinel/: download.sh  setup_env.sh
sentinel/src/: cli.py  control.py  keypoints.py  main.py  person.py  pipeline.py
src/: cli.py  dynamicquant.py  idle.py  main.py  pid.py  pose.py  poseclass.py  send.py
veteran/: flake.nix  pyproject.toml  start-container.sh
veteran/src/: camera.py  cli.py  kbdcontrol.py  pid.py  pose.py  send.py  track_then_video.py  utils.py
warden/: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix  kbdcontrol.py  memory-backup.x  memory.x  rust-toolchain.toml
warden/.cargo/: config.toml
warden/.zed/: settings.json
warden/src/: controller.rs  decoder.rs  main.rs  motor.rs  servo.rs  usb.rs
