[tool.poetry]
name = "turret"
version = "0.1.0"
description = ""
authors = ["Derock <derock@derock.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.10"
cv = "^1.0.0"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
