[package]
edition = "2021"
name = "warden"
version = "0.1.0"
authors = ["Derock <derock@derock.dev>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = [
  "task-arena-size-4096",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-sync = { version = "0.6.1" }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.2.0", features = [
  "defmt",
  "stm32g0b1re",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
] }
embassy-usb = { version = "0.4.0", default-features = false, features = [
  "defmt",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
tmc2209 = { git = "https://github.com/mitchmindtree/tmc2209", version = "0.2.2", features = [
  "ufmt",
] }
static_cell = { version = "2.1.0" }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
minicbor = { version = "0.25.1", default-features = false, features = ["derive"] }
minicbor-derive = "0.15.3"

[profile.release]
debug = 2
